playground/notas_tests/invalid/pos-03.hulk
let x = 1 in {
    print(1 + "bad");
};
